--- a/mod/thmod/localisation/english/apocalypse_l_english.yml
+++ b/mod/thmod/localisation/english/apocalypse_l_english.yml
@@ -38,8 +38,8 @@
  not_barren_molten_frozen_toxic_test_fire:3 "Target must be one of the following to be a test fire candidate:\n$tt$§H- Uninhabited Habitable World§!\n$tt$§H- $pc_barren$§!\n$tt$§H- $pc_molten$§!\n$tt$§H- $pc_frozen$§!\n$tt$§H- $pc_toxic$§!"
  not_owned_test_fire:0 "Target is an §Yowned colony§! test fire target"
  primitives_not_in_borders:1 "§R$TRIGGER_FAIL$Pre-FTL target is not within our borders§!"
- primitives_not_full_interference:1 "§R$TRIGGER_FAIL$Requires §Y$interference_aggressive$§! $policy_interference$ policy§!"
- primitives_not_active_or_full_interference:1 "§R$TRIGGER_FAIL$Requires §Y$interference_active$§! or §Y$interference_aggressive$§! $policy_interference$ policy§!"
+ primitives_not_full_interference:1 "§R$TRIGGER_FAIL$ต้องมี §Y$interference_aggressive$§! นโยบาย $policy_interference$§!"
+ primitives_not_active_or_full_interference:1 "§R$TRIGGER_FAIL$ต้องมี §Y$interference_active$§! หรือ §Y$interference_aggressive$§! นโยบาย $policy_interference$§!"
  no_assimilatable_pops:0 "§R$TRIGGER_FAIL$Target does not house any Pops suitable for cybernetic assimilation§!"
  enable_colossus_project:0 "§Hออกโครงการพิเศษ:§! โครงการโคลอสซัส\n\n"
  describe_colossus_project:0 "เสร็จสิ้น §Yโครงการโคลอสซัส§! เพื่อปลดล็อก §Hยานประเภท§! §Yโคลอสซัส§! ที่สามารถติด §Rอาวุธทำลายดาวเคราะห์§! ได้"
