--- a/mod/thmod/localisation/english/distant_stars_l_english.yml
+++ b/mod/thmod/localisation/english/distant_stars_l_english.yml
@@ -104,20 +104,20 @@
  DISTAR_SIGNAL_CAT_DESC:1 "Ship sensors are picking up an unexplained pattern of interference in the [From.GetStarName] System."
  DISTAR_PUZZLE_CAT:1 "Unscannable Object"
  DISTAR_PUZZLE_CAT_DESC:1 "An object that reflects our sensors has been located in the [From.GetStarName] asteroid field, near [From.GetName]. Visual observation has identified the object as polygonal in shape, but due to lack of scanner data, little else is known."
- distar.1.name:0 "Wreckage Identified"
+ distar.1.name:0 "ระบุซากปรักหักพังแล้ว"
  distar.1.desc:0 "Our crew aboard the [Root.GetName] report that the [From.GetName] shipwreck appears to have been the result of an unexpected geomagnetic solar storm. The supply ship suffered a complete loss of life-support systems and sustained inoperable damage, drifting until it entered [From.GetName]'s gravity well. There are no survivors.\n\nThe ship's cargo-hold does indeed contain a notable amount of minerals - however, the captain of the [Root.GetName] cautions that the construction indicates §Y[wreckage_owner.GetAdj]§! design.\n\nIt is highly likely that the minerals belong to the §Y[wreckage_owner.GetName]§!, and they may be displeased should we lay claim to their shipment."
- distar.1.a:0 "We need those minerals."
- distar.1.a.tooltip:0 "This will displease the §Y[wreckage_owner.GetName]§!."
- distar.1.b:0 "We will not risk an altercation."
- distar.1.b.tooltip:0 "Return the minerals to the §Y[wreckage_owner.GetName]§!.\nThis will please them and increase our £influence£ §HInfluence§!."
+ distar.1.a:0 "เราต้องการแร่เหล่านั้น"
+ distar.1.a.tooltip:0 "สิ่งนี้จะทำให้ §Y[wreckage_owner.GetName]§! ไม่พอใจ"
+ distar.1.b:0 "เราจะไม่เสี่ยงต่อความขัดแย้งที่จะเกิดขึ้น"
+ distar.1.b.tooltip:0 "นำแร่คืนกลับไปให้ §Y[wreckage_owner.GetName]§!\nสิ่งนี้จะทำให้พวกเขาพอใจ และเพิ่ม £influence£ §Hอิทธิพล§! ของเรา"
  distar.2.name:0 "Supply Ship Wreckage Cargo"
  distar.2.desc:0 "[Root.GetSpeciesNamePlural]. It has come to our attention that a missing §Y[wreckage_owner.GetAdj]§! supply ship sustained terminal damage en route to §Y[wreckage_owner.Capital.GetName]§! and drifted into [Root.GetAdj] space, where it was promptly and unceremoniously pilfered of its cargo.\n\nDid you really believe this transgression would go unnoticed? The §Y[wreckage_owner.GetName]§! requests the immediate reimbursement of our supplies."
  distar.2.desc.machi:0 "[Root.GetSpeciesNamePlural]. It has come to our attention that a missing §Y[wreckage_owner.GetAdj]§! supply ship sustained terminal damage on its path to §Y[wreckage_owner.Capital.GetName]§!. Our sensors report our vessel entered the [From.From.GetName] system, where your kind emptied its cargo for your own uses.\n\nUnacceptable. Return our cargo at once, [Root.GetSpeciesNamePlural]."
  distar.2.a:0 "ยานขนส่ง? ยานขนส่งอะไร?"
  distar.2.b:0 "เราจะส่งคืนของของคุณ"
- distar.3.name:0 "Wreckage Cargo Returned"
+ distar.3.name:0 "ซากสินค้าถูกส่งคืน"
  distar.3.desc:0 "[Root.GetSpeciesNamePlural]! We have received word of our downed supply ship's cargo. We would like to extend our gratitude to you for taking the time to recover it, without the need for [wreckage_owner.GetAdj] intervention."
- distar.3.a:0 "Our pleasure, [wreckage_owner.GetSpeciesNamePlural]."
+ distar.3.a:0 "ด้วยความยินดี, [wreckage_owner.GetSpeciesNamePlural]"
  distar.6.name:0 "Frozen in Time"
  distar.6.desc:0 "The crew of the [Root.GetName] were intrigued to find the remnants of an industrial-age civilization on [From.GetName]. Investigation indicates [From.GetName] had sustained an atmosphere for millions of years, until massive superflares from the unstable surface of the star [From.GetStarName] led to runaway ionization and depletion of the planet's atmospheric gases.\n\nWith no atmosphere, the lifeless cities on [From.GetName] have been frozen in time for millennia, silent monuments to the mass extinction that happened there.\n\nScience Officer [Root.GetLeaderName] cautions that any colonies in the [From.GetStarName] system may be subject to the whims of the star's turbulence."
  distar.7.name:0 "Superflare"
@@ -1692,7 +1692,7 @@
  lgate_disabled_MEGASTRUCTURE_DETAILS:0 "$lgate_disabled_DESC$"
  lgate:0 "L-Gate"
  lgates:0 "L-Gates"
- l_cluster_chain_title:1 "The L-Cluster"
+ l_cluster_chain_title:1 "L-Cluster"
  l_cluster_chain_desc:0 "We have learned of a mysterious star cluster somewhere just beyond the periphery of our galaxy. It can only be accessed through §HL-Gates§!, artificial subspace portals found in certain systems.\n\nThese Gateways have been deliberately disabled by someone, and for now we lack the necessary insight into the subspace mechanics that govern their use to lift the lockdown."
  clues:1 "ข้อมูลเชิงลึก L-Gate"
  clue:1 "ข้อมูลเชิงลึก L-Gate"
@@ -2009,7 +2009,7 @@
  NAME_Nivlac_Circle:0 "Nivlac Circle"
  empire_xenophile:0 "$TRIGGER_FAIL$Our empire values xeno species too highly."
  FLEET_RESEARCH_PROJECT_EFFECT:0 "Send fleet $FLEET$ to research $PROJECT$"
- LGATE_COUNTRY_CANNOT_USE:0 "$TRIGGER_FAIL$ We do not have the means to enter the §YL-Cluster§!."
+ LGATE_COUNTRY_CANNOT_USE:0 "$TRIGGER_FAIL$ เราไม่มีหนทางที่จะเข้าสู่ §YL-Cluster§! ได้"
  BYPASS_DESC_INACTIVE_LGATE_DISABLED:0 "ต้องเปิดใช้งานโดยการรวบรวม §Y$clues$§!"
  BYPASS_DESC_INACTIVE_LGATE:0 "ต้องเปิดใช้งานโดยการรวบรวม §Y$clues$§!"
  FLEETORDER_RESEARCH_ANOMALIES:0 "วิจัยความผิดปกติในระบบ"
