--- a/mod/thmod/localisation/english/events_2_l_english.yml
+++ b/mod/thmod/localisation/english/events_2_l_english.yml
@@ -1352,6 +1352,10 @@
  pol_ai_outlawed:0 "Positron Inhibitors"
  pol_ai_servitude:0 "Servitude Protocols"
  pol_ai_full_rights:0 "Synthetic Rights"
+ fallen_empires_situation: "Fallen Empire Behaviour"
+ fallen_empires_situation_type: "$fallen_empires_situation$"
+ fallen_empires_situation_monthly_change_tooltip: ""$situation_monthly_change_tooltip_no_control$"
+ fallen_empires_situation_desc: "$fallen_empires_situation$"
  fallen_empires_tasks.2.name:0 "การติดต่อจาก §H[FallenEmpireTaskOrigin.GetName]§!"
  fallen_empires_tasks.2.desc.a.materialist:0 "[Root.GetSpeciesName], we have decided to grace your empire with a gift of resources as a token of our esteem. Do not squander our generosity or take our favor for granted."
  fallen_empires_tasks.2.desc.a.xenophile:0 "[Root.GetSpeciesName], your species is a most worthwhile addition to the galactic community. As a token of our esteem, we have decided to bestow on you a generous gift of valuable minerals and resources."
