--- a/mod/thmod/localisation/english/federations_l_english.yml
+++ b/mod/thmod/localisation/english/federations_l_english.yml
@@ -250,7 +250,7 @@
  OPINION_EXCELLENT_DESC:0 "Our envoys have forged strong ties with this empire. Our empires are eager to work together diplomatically."
  OPINION_LEVEL_VAL_DESC:2 "ขณะนี้เรามี $RELATION$ ($VAL|+=0$) เดือนที่แล้วมีการเปลี่ยนแปลง $DELTA|+=0$"
  OPINION_LEVEL_TREND:0 "With that trend we will have $RELATION$ Relations in $MONTHS$ month(s)"
- requires_terrible_opinion_or_supremacist:2 "$TRIGGER_FAIL$§RRequires $OPINION_TERRIBLE$, §YRivalry§!, an envoy sent to §YHarm Relations§!, or one empire must either be in the $diplo_stance_supremacist_name$ $DIPLOMACY_STANCE$, $diplo_stance_animosity_name$ $DIPLOMACY_STANCE$, or be a §H$COUNTRY_FALLEN_EMPIRE$§!.§!\n"
+ requires_terrible_opinion_or_supremacist:2 "$TRIGGER_FAIL$§Rต้องมี $OPINION_TERRIBLE$, §Yคู่แข่ง§!, ส่งทูตไป §Yทำลายความสัมพันธ์§! หรือจักรวรรดิหนึ่งจะต้องมี $DIPLOMACY_STANCE$ $diplo_stance_supremacist_name$, $DIPLOMACY_STANCE$ $diplo_stance_animosity_name$, หรือเป็น §H$COUNTRY_FALLEN_EMPIRE$§!§!\n"
  requires_poor_or_worse_opinion:1 "$TRIGGER_FAIL$§Rต้องมี $OPINION_POOR$ ทูตที่ส่งไป §Yทำลายความสัมพันธ์§!§!"
  requires_excellent_or_better_opinion:1 "$TRIGGER_FAIL$§Rต้องมี $OPINION_EXCELLENT$ หรือส่งทูตไป §Yปรับปรุงความสัมพันธ์§!§!"
  requires_good_or_better_opinion:1 "$TRIGGER_FAIL$§Rต้องมี $OPINION_GOOD$ หรือส่งทูตไป §Yปรับปรุงความสัมพันธ์§!§!"
@@ -1634,7 +1634,7 @@
  mod_galactic_community_delegate:0 "ผู้แทนประชาคม"
  mod_station_gatherers_energy_produces_mult:0 "Mining Station Energy Output"
  mod_unemployment_resources_energy_upkeep_add:0 "พลังงานที่ใช้บำรุงรักษาผู้ว่างงาน"
- mod_damage_vs_country_type_gray_goo_mult:0 "Damage to Nanites"
+ mod_damage_vs_country_type_gray_goo_mult:0 "สร้างความเสียหายกับ นาไนต์/Gray"
  building_embassy:0 "ศูนย์กลางสถานทูตของจักรวรรดิ"
  building_embassy_desc:0 "This building forms the heart of the Empire's diplomatic efforts.\n\nDue to the need to be close to the seat of government, it can only be built at our Capital."
  building_grand_embassy:0 "ศูนย์กลางสถานทูตขนาดใหญ่ของจักรวรรดิ"
