--- a/mod/thmod/localisation/english/l_english.yml
+++ b/mod/thmod/localisation/english/l_english.yml
@@ -2137,7 +2137,7 @@
  slave_army:0 "กองทัพทาส"
  slave_army_plural:0 "กองทัพทาส"
  slave_army_desc:0 "Slave soldiers who serve their masters on the battlefield. Most are conscripted by force, but many slaves volunteer in a desperate attempt to increase their food rations or escape from grueling labor."
- requires_slave_processing_facility:0 "$TRIGGER_FAIL$Requires a $building_slave_processing$ or $sm_ring_slave_processing_facility$."
+ requires_slave_processing_facility:0 "$TRIGGER_FAIL$ต้องมี $building_slave_processing$ หรือ $sm_ring_slave_processing_facility$"
  clone_army:0 "กองทัพโคลน"
  clone_army_plural:0 "กองทัพโคลน"
  clone_army_desc:1 "Specialized clones that reach adulthood in a matter of months. With a natural lifespan of less than a decade, their lack of personal initiative is deemed an acceptable trade-off for their total obedience to officers."
@@ -3863,10 +3863,10 @@
  TRAIT_TIYANKI_BUDDING_EFFECT:0 "Each pop working as a slave or better produces 0.05 £mod_pop_growth_speed£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!.\n\nThis stacks with other sources of $MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$ such as £building£ §H$building_clone_vats$§! or £job_spawning_drone£ §H$job_spawning_drone_plural$§!."
  trait_humanoid_existential_iteroparity: "Existential Iteroparity"
  trait_humanoid_existential_iteroparity_desc: "§LThis species grew up in hostile conditions where outbreeding your rivals was the key to survival.§!"
- TRAIT_HUMANOID_EXISTENTIAL_ITEROPARITY_EFFECT: "£pops£ §YPop Growth§! During War and Crisis: §G+30%§!"
- trait_humanoid_psychological_infertility: "Psychological Infertility"
+ TRAIT_HUMANOID_EXISTENTIAL_ITEROPARITY_EFFECT: "£pops£ §Yประชากรเพิ่ม§! ในช่วงสงครามและวิกฤติไครซิส: §G+30%§!"
+ trait_humanoid_psychological_infertility: "ภาวะมีบุตรยากทางจิต"
  trait_humanoid_psychological_infertility_desc: "§LMembers of this species are extremely sensitive to the rigors of conflict with the resulting stress taking over the more primal urges.§!"
- TRAIT_HUMANOID_PSYCHOLOGICAL_INFERTILITY_EFFECT: "£pops£ §YPop Growth§! During War and Crisis: §R-30%§!"
+ TRAIT_HUMANOID_PSYCHOLOGICAL_INFERTILITY_EFFECT: "£pops£ §Yประชากรเพิ่ม§! ในช่วงสงครามและวิกฤติไครซิส: §R-30%§!"
  trait_humanoid_jinxed: "Jinxed"
  trait_humanoid_jinxed_desc: "§LLeaders from this species seem clumsier and more prone to accidents or vices than average, as if cursed from birth.§!"
  TRAIT_HUMANOID_JINXED_EFFECT: "Leader Maximum Negative Traits: §R+1§!"
@@ -5636,9 +5636,9 @@
  UNSAVED_CHANGES:0 "Unsaved Changes"
  INCOMPLETE_SHIP_DESIGN:0 "Incomplete Ship Design"
  CAN_SAVE:0 "Save the current Ship Design to the Orbital Construction list."
- CANT_SAVE:0 "Cannot Save"
- CANT_MAKE_CHANGES:0 "Cannot make changes"
- CANT_MAKE_CHANGES_AUTO_GEN:0 "§RAuto-design takes control over upgrading and changing of the ships§!"
+ CANT_SAVE:0 "ไม่สามารถเซฟได้"
+ CANT_MAKE_CHANGES:0 "ไม่สามารถทำการเปลี่ยนแปลงได้"
+ CANT_MAKE_CHANGES_AUTO_GEN:0 "§Rการออกแบบอัตโนมัติจะควบคุมการอัปเกรดและการเปลี่ยนแปลงของยาน§!"
  MISSING_PREREQUISITES:0 "Empire is currently missing technology required for $COMPONENT|H$."
  MISSING_FTL:0 "§RShip Design lacks an FTL drive: The FTL range of this Ship Design will be§! §H0§!"
  COMPONENT_SHIP_LIMIT_REACHED:1 "$COMPONENT|H$ limit reached! Ship Design may not include more than $LIMIT$."
@@ -6634,9 +6634,9 @@
  SYSTEM_VIEW_PLANETOID_LIBERTY:0 "§TThis Empire does not currently exist, but can be Liberated.§!"
  SYSTEM_VIEW_POPS_ICON:0 "ประชากรบน $NAME|$:"
  SYSTEM_VIEW_POP_DESC:0 "$VAL|H$ $NAME$"
- ALLIANCE_MEMBER_ACCEPTANCE_YES_SPONSOR:0 "§H:§! votes §GYES§! ($WHO|H$ is sponsored by $SPONSOR|H$)"
- ALLIANCE_MEMBER_ACCEPTANCE_YES:0 "§H:§! votes §GYES§!"
- ALLIANCE_MEMBER_ACCEPTANCE_NO:0 "§H:§! votes §RNO§!"
+ ALLIANCE_MEMBER_ACCEPTANCE_YES_SPONSOR:0 "§H:§! โหวต §Gรับ§! ($WHO|H$ ได้รับการสนับสนุนโดย $SPONSOR|H$)"
+ ALLIANCE_MEMBER_ACCEPTANCE_YES:0 "§H:§! โหวต §Gรับ§!"
+ ALLIANCE_MEMBER_ACCEPTANCE_NO:0 "§H:§! โหวต §Rไม่รับ§!"
  PEACE_DEMAND:0 "ต้องการยอมจำนน"
  PEACE_SURRENDER:0 "ยอมแพ้"
  PEACE_NEGOTIATE:0 "เจรจาสันติภาพ"
@@ -6649,11 +6649,11 @@
  VASSALIZATION_PROTECTORATE_FACTOR:0 "ประโยชน์จากการวิจัยของจักรวรรดิในอารักขา"
  RELATIVE_POWER_ACCEPTANCE_FACTOR:0 "พลังอำนาจโดยรวมของจักรวรรดิ"
  DISLIKES_ALLY_FEDERATION_FACTOR:0 "จะไม่เข้าร่วมสหพันธ์กับ $COUNTRY|Y$"
- ALLY_DISLIKES_YOU_FEDERATION_FACTOR:1 "Federation member $COUNTRY|Y$ does not wish $ACTOR|Y$ to join"
+ ALLY_DISLIKES_YOU_FEDERATION_FACTOR:1 "สมาชิกสหพันธ์ $COUNTRY|Y$ ไม่ต้องการให้ $ACTOR|Y$ เข้าร่วม"
  DISLIKES_ALLY_ASSOCIATE_FACTOR:0 "Will not associate with $COUNTRY|Y$"
  MUTUAL_THREAT_ACCEPTANCE_FACTOR:2 "Mutual Threats"
  THREAT_ACCEPTANCE_FACTOR:0 "Under Threat"
- ALLIANCE_SPONSOR_FACTOR:0 "Sponsored by $SPONSOR|H$"
+ ALLIANCE_SPONSOR_FACTOR:0 "ได้รับการสนับสนุนโดย $SPONSOR|H$"
  FEDERATION_LAW_SUPPORT:0 "Supports Federation Development"
  ALLIANCE_ACCEPTANCE_FACTOR:0 "Already in Alliance"
  FEDERATION_ACCEPTANCE_FACTOR:0 "ในสหพันธ์"
@@ -6705,7 +6705,7 @@
  NO_DIPLOMATIC_INTEREST:0 "Not diplomatically relevant"
  WAS_HUMAN:0 "Recently player controlled"
  NO_SUITABLE_PLANET:1 "No migration is possible between $US$ and $THEM$ due to lack of suitable planets or restrictions on Pop migration."
- AGGRESSIVE_WAR_PHILOSOPHY:0 "§Y$policy_war_philosophy$§! allows wars of aggression"
+ AGGRESSIVE_WAR_PHILOSOPHY:0 "§Y$policy_war_philosophy$§! ทำให้เกิดสงครามแบบรุกราน"
  PEACEFUL_WAR_PHILOSOPHY:0 "§Y$policy_war_philosophy$§! forbids wars of aggression"
  CANT_TRADE_ENERGY:0 "§RWill not accept empty trade, trading systems, or exchanging same type of Resources.§!"
  CANT_TRADE_ATTITUDE:0 "§R$STANCE$: will not accept any demands.§!"
@@ -7654,7 +7654,7 @@
  requires_recipient_not_pompous:0 "$TRIGGER_FAIL$§RThey are §Y$civic_pompous_purists$§!! They do not entertain foreign diplomats!§!"
  requires_actor_not_pompous:0 "$TRIGGER_FAIL$§RWe are §Y$civic_pompous_purists$§!! We will not humiliate ourselves with such a farce!§!"
  requires_recipient_not_pompous_borders:0 "$TRIGGER_FAIL$§RThey are §Y$civic_pompous_purists$§!! They would not stop laughing when we told them to stay out of our sovereign space!§!"
- terraform_fail_no_presapient_protection_or_no_presapients:0 "$TRIGGER_FAIL$§ROur §YPre-Sapient Policy§! does not allow us to terraform planets with pre-sapient populations.§!"
+ terraform_fail_no_presapient_protection_or_no_presapients:0 "$TRIGGER_FAIL$§R§Yนโยบาย Pre-Sapient§! ของเราไม่อนุญาตให้เราปรับสภาพดาวพื้นผิวดาวเคราะห์ที่มีประชากร pre-sapient ได้§!"
  requires_actor_not_feudal_society:0 "$TRIGGER_FAIL$§RAs a §Y$civic_feudal_realm$§!, revoking noble titles (dismissing Leaders) is not permitted.§!"
  requires_fleet_control:0 "$TRIGGER_FAIL$§RWe must control the fleet to dismiss its admiral.§!"
  requires_recipient_not_subject_of_federation_member:0 "$TRIGGER_FAIL$§RWe cannot declare war on the subject of a Federation member.§!"
@@ -10215,24 +10215,24 @@
  planet_automation_permanent_employment_center:0 "Posthumous Employment"
  planet_automation_psi_corps_building:0 "หน่วยทหารพลังจิต"
  planet_automation_biotrophy_management:0 "£pop_cat_bio_trophy£ ไบโอโทรฟี่"
- planet_automation_worm:0 "การจัดตำแหน่ง Omega"
+ planet_automation_worm:0 "Omega Alignment"
  planet_automation_upgrade_buildings:0 "£upgrade£ อัปเกรดสิ่งก่อสร้าง"
  PLANET_AUTOMATION_TITLE:0 "ระบบบริหารดาวเคราะห์อัตโนมัติ"
  planet_automation_deficit_restriction:0 "£economy£ ป้องกันการขาดดุลจากการก่อสร้าง"
- planet_automation_deficit_restriction_desc:0 "Prevents construction of buildings which would introduce or increase a deficit of a resource, either directly by the upkeep of the building/district or indirectly by any jobs created."
- planet_automation_amenities_desc:0 "Enables automatic management of planet Amenities, both in terms of setting job priority and constructing new buildings that provide amenity jobs."
- planet_automation_designation_construction_desc:1 "Enables automatic planetary construction of buildings and districts that align with the planet's designation.\n\nBuildings and districts providing new jobs will be constructed when there are no free jobs or when there is an unemployed pop which can work a job associated with this designation."
- planet_automation_rare_resources_desc:0 "Enables automatic construction of buildings that provide jobs which produce rare resources during an Empire wide shortage."
- planet_automation_pop_assembly_desc:0 "Enables construction of buildings that assemble pops."
- planet_automation_housing_desc:0 "Enable automatic construction of additional housing."
- planet_automation_building_slot_desc:0 "Enable automatic construction of new building slots."
- planet_automation_crime_desc:1 "Enable automation of §H[Owner.GetCrimeDeviancy]§! prevention, both in terms of setting job priority and constructing new buildings."
- planet_automation_clear_blockers_desc:0 "Enable automatic clearing of blockers when it is needed to unlock more district slots."
- planet_automation_permanent_employment_center_desc:0 "Enable automatic construction of §HPosthumous Employment Center§! on planets with raw resource focus."
- planet_automation_psi_corps_building_desc:0 "Enable construction of §HPsi Corps§! on all planets."
- planet_automation_biotrophy_management_desc:0 "Enable construction of §HOrganic Sanctuaries§!."
- planet_automation_worm_desc:0 "Enable construction of §HOmega Alignment§!."
- planet_automation_upgrade_buildings_desc:0 "Enable automatically upgrading buildings. This will have priority over constructing new buildings."
+ planet_automation_deficit_restriction_desc:0 "ป้องกันการก่อสร้างที่อาจเพิ่มการขาดดุลทรัพยากร ไม่ว่าจะโดยการบำรุงรักษา สิ่งปลูกสร้าง/เขต หรือ โดยอ้อมจากงานต่างๆ"
+ planet_automation_amenities_desc:0 "เปิดใช้งานการจัดการความอยู่ดีกินดีของดาวเคราะห์อัตโนมัติ ทั้งในแง่ของการกำหนดลำดับความสำคัญของอาชีพและการสร้างสิ่งปลูกสร้างใหม่ที่จัดหางานที่เกี่ยวกับความอยู่ดีกินดี"
+ planet_automation_designation_construction_desc:1 "เปิดใช้งานการสร้างสิ่งปลูกสร้างและเขตต่างๆในดาวเคราะห์โดยอัตโนมัติ ให้สอดคล้องกับการกำหนดประเภทของดาวเคราะห์\n\nสิ่งปลูกสร้างและเขตที่สร้างงานใหม่ๆจะถูกสร้างขึ้นเมื่อไม่มีตำแหน่งงานว่างหรือเมื่อมีประชากรว่างงานที่สามารถทำงานที่เกี่ยวข้องกับการกำหนดนี้ได้"
+ planet_automation_rare_resources_desc:0 "เปิดใช้งานการสร้างสิ่งปลูกสร้างอัตโนมัติซึ่งจะสร้างงานที่ผลิตทรัพยากรที่หายากในช่วงที่จักรวรรดิขาดแคลน"
+ planet_automation_pop_assembly_desc:0 "เปิดใช้งานการสร้างสิ่งปลูกสร้างอัตโนมัติที่จะประกอบประชากร"
+ planet_automation_housing_desc:0 "เปิดใช้งานการก่อสร้างที่อยู่อาศัยเพิ่มเติมอัตโนมัติ"
+ planet_automation_building_slot_desc:0 "เปิดใช้งานการสร้างช่องก่อสร้างใหม่อัตโนมัติ"
+ planet_automation_crime_desc:1 "เปิดใช้งานระบบอัตโนมัติของการป้องกัน §H[Owner.GetCrimeDeviancy]§! ทั้งในด้านการจัดลำดับความสำคัญของอาชีพและการสร้างสิ่งปลูกสร้างใหม่"
+ planet_automation_clear_blockers_desc:0 "เปิดใช้งานการทำลายสิ่งกีดขวางอัตโนมัติเมื่อจำเป็นเพื่อปลดล็อกช่องเขตก่อสร้างเพิ่มเติม"
+ planet_automation_permanent_employment_center_desc:0 "เปิดใช้งานการสร้าง §HPosthumous Employment Center§! โดยอัตโนมัติ บนดาวเคราะห์ที่โฟกัสทรัพยากรวัตถุดิบ"
+ planet_automation_psi_corps_building_desc:0 "เปิดใช้งานการก่อสร้าง §Hหน่วยทหารพลังจิต§! บนดาวเคราะห์ทุกดวง"
+ planet_automation_biotrophy_management_desc:0 "เปิดใช้งานการก่อสร้าง §Hเขตรักษาพันธุ์สิ่งมีชีวิต§!"
+ planet_automation_worm_desc:0 "เปิดใช้งานการก่อสร้าง §HOmega Alignment§!"
+ planet_automation_upgrade_buildings_desc:0 "เปิดใช้งานการอัปเกรดสิ่งปลูกสร้างอัตโนมัติ ซึ่งจะมีความสำคัญมากกว่าการสร้างสิ่งปลูกสร้างแบบใหม่ๆ"
  planet_automation_shift_click:0 "§HShift-click§! เพื่อสลับการตั้งค่านี้เป็นค่าเริ่มต้นสำหรับอาณานิคมใหม่ทั้งหมด ค่าขณะนี้คือ: $TOGGLED|H$"
  planet_automation_ctrl_click:0 "§HControl-click§! เพื่อสลับการตั้งค่าบนดาวเคราะห์ทั้งหมด"
  planet_automation_setting_enabled:0 "เปิด"
@@ -11866,8 +11866,8 @@
  mod_country_resource_max_sr_dark_matter_add:0 "Dark Matter Storage Capacity"
  mod_megastructures_cost_mult: "Megastructure Build Cost"
  mod_megastructures_habitat_cost_mult:0 "ค่าใช้จ่ายในการสร้างที่อยู่อาศัยในอวกาศ"
- mod_megastructures_habitat_alloys_upkeep_mult: "Habitat £alloys£ Alloys Upkeep"
- mod_planet_districts_hab_alloys_upkeep_mult: "Habitat Districts £alloys£ Alloys Upkeep"
+ mod_megastructures_habitat_alloys_upkeep_mult: "ที่อยู่อาศัยในอวกาศมีค่าบำรุงรักษาที่เป็น £alloys£ โลหะผสม"
+ mod_planet_districts_hab_alloys_upkeep_mult: "เขตต่างๆของที่อยู่อาศัยในอวกาศมีค่าบำรุงรักษาที่เป็น £alloys£ โลหะผสม"
  mod_operations_cost_mult:0 "ค่าใช้จ่ายของปฏิบัติการ (สายลับ)"
  mod_operations_upkeep_mult:0 "ค่าบำรุงรักษาของปฏิบัติการ (สายลับ)"
  mod_federation_unity_produces_add:0 "$mod_planet_jobs_unity_produces_mult$"
@@ -11967,7 +11967,7 @@
  resource_usage_tooltip_title: "ใช้ £$icon$£ $name$ อัตโนมัติ"
  resource_usage_tooltip: "£trigger_yes£ ระบบบริหารดาวเคราะห์อัตโนมัติ ได้รับอนุญาตให้ใช้ £$icon$£ $name$ เมื่อสร้างบนดาวเคราะห์"
  resource_usage_tooltip_neg: "£trigger_no£ ระบบบริหารดาวเคราะห์อัตโนมัติ ไม่ได้รับอนุญาตให้ใช้ £$icon$£ $name$ เมื่อสร้างบนดาวเคราะห์"
- MOD_VERSION:0 "Mod v0.70.1, Update 19/09/2023"
+ MOD_VERSION:0 "Mod v0.70.2, Update 27/09/2023"
  MOD_DEV_MSG:0 "ผู้พัฒนา: §R*ตอนนี้ม็อดยังเป็นเวอร์ชัน Alpha อยู่นะครับ คำศัพท์ยังไม่ค่อยนิ่ง หากมีการเปลี่ยนแปลงคำสำคัญจะแจ้งให้ทราบอีกครั้ง§!\n\n§Bคำที่เปลี่ยนมีดังนี้:\n - World เดิมใช้(โลก) -> เปลี่ยนเป็น(ดาว) *บางคำยังใช้โลกอยู่ แต่ส่วนใหญ่จะใช้คำว่าดาว\n - The Shroud -> ดินแดนพลังจิตบริสุทธิ์/อาณาจักรแห่งพลังจิตบริสุทธิ์\n§!\n\n§Hกรอบการทำงาน เป้าหมาย และ ลำดับความสำคัญ§!\n §E1.DLC ที่รองรับ§! :  Utopia, Synthetic Dawn, Apocalypse, MegaCorp, Federations, Nemesis, Leviathans, Distant Stars, Ancient Relics, Galactic Paragons \n §E2. หลักเกณฑ์การทับศัพท์§! : ราชบัณฑิตยสภา \n §E3. ลำดับความสำคัญในการแปล(เรียงจากมากไปน้อย)§! : (interface/ui) -> (modifier/effect) -> (tutorial) -> (description) -> (event/message)\n\n§Hแหล่งข้อมูลและแรงบันดาลใจ§!\n §E1.หนังสือ:§! เซเปียนส์-ประวัติย่อมนุษยชาติ, โฮโมดีอุส-ประวัติย่อของวันพรุ่งนี้, ยูโทเปีย-มหานครในฝัน, หนึ่ง-เก้า-แปด-สี่ : 1984, หนังสือเรียนวิชาฟิสิกส์, เคมี, ชีว เบื้องต้นสมัยเรียนมหาลัย, วิชาปรัชญาเบื้องต้น, The Matrix and Philosophy: Welcome to the Desert of the Real\n §E2.สารคดี:§! ช่องยูทูป SCIWAYS, GrandMaster TV, คนใฝ่รู้ [Studios], eduHUB, ชีวิตสดใส, คนช่างสงสัย Curiosity Channel, อาจวรงค์ จันทมาศ, Matrix Explained, Kurzgesagt, ZogZag Story, TechOffside\n §E3.บันเทิงคดี:§! The Matrix 1-3 + The Animatrix, Interstellar, 2001: A Space Odyssey, DUNE, Avatar, Star Wars, WALL-E, Star Trek, Inception, Transcendence, Predator, All Tomorrows\n §E4.เอกสาร:§! หลักเกณฑ์การทับศัพท์ภาษาอังกฤษราชบัณฑิตยสภา\n\n§Hเครื่องมือที่ใช้สร้างม็อดมีดังนี้§!\nLocalisation-Manager(Stellaris), Localisation-Editor, MadeeAI Translator"
  MOD_SUPPORTERS:0 "ผู้สนับสนุน: n/a"
  MOD_TEST1DUMMY1:0 "dummy1"
