--- a/mod/thmod/localisation/english/leviathans_l_english.yml
+++ b/mod/thmod/localisation/english/leviathans_l_english.yml
@@ -789,7 +789,7 @@
  GUARDIAN_DRIVE:0 "$BIO_DRIVE$"
  GUARDIAN_PROPULSION:0 "$BIO_PROPULSION$"
  GUARDIAN_SENSORS:0 "$BIO_SENSORS$"
- mod_damage_vs_country_type_guardian_dragon_mult:0 "Damage to Ether Drake"
+ mod_damage_vs_country_type_guardian_dragon_mult:0 "สร้างความเสียหายกับ Ether Drake"
  enigmatic_fortress_chain_title:0 "The Enigmatic Fortress"
  enigmatic_fortress_chain_desc:0 "Having forced a shutdown of the ancient fortress, a team of explorers has been sent to find a way of stopping it from powering back up."
  fortress_station_data:0 "Fortress Station Data"
@@ -845,15 +845,15 @@
  automated_dreadnought_weak_points_desc:0 "Fleet commanders engaging the Automated Dreadnought have been instructed to target any subsystems that will impair its automation processes."
  asteroid_hive_weak_points:0 "Hive Harrier"
  asteroid_hive_weak_points_desc:0 "Updated targeting data will allow our fleets to bombard Asteroid Hives where their surface armor is the most vulnerable."
- mod_damage_vs_country_type_guardian_horror_mult:0 "Damage to Dimensional Horror"
- mod_damage_vs_country_type_guardian_dreadnought_mult:0 "Damage to Automated Dreadnought"
- mod_damage_vs_country_type_guardian_hiver_mult:0 "Damage to Asteroid Hives"
+ mod_damage_vs_country_type_guardian_horror_mult:0 "สร้างความเสียหายกับ Dimensional Horror"
+ mod_damage_vs_country_type_guardian_dreadnought_mult:0 "สร้างความเสียหายกับ Automated Dreadnought"
+ mod_damage_vs_country_type_guardian_hiver_mult:0 "สร้างความเสียหายกับ Asteroid Hives"
  curator_buff_stellarite:0 "Stellar Drain"
  curator_buff_stellarite_desc:0 "The Curators have instructed us to fire at the Stellar Devourer's regulatory valves in order to disperse its inner heat."
  curator_buff_sphere:0 "The Infinite Calibrator"
  curator_buff_sphere_desc:0 "The Infinity Machine's real-time threat update system has one weak spot. It cannot keep up with constant change. We will henceforth assign a crew member on each ship to constantly make calibrations to the ship guns."
- mod_damage_vs_country_type_guardian_stellarite_mult:0 "Damage to Stellar Devourer"
- mod_damage_vs_country_type_guardian_sphere_mult:0 "Damage to the Infinity Machine"
+ mod_damage_vs_country_type_guardian_stellarite_mult:0 "สร้างความเสียหายกับ Stellar Devourer"
+ mod_damage_vs_country_type_guardian_sphere_mult:0 "สร้างความเสียหายกับ Infinity Machine"
  curator_poi_chain_title:0 "Mysteries of the Universe"
  curator_poi_chain_desc:1 "It is the Curator's business to know things. We may buy information, but it is up to us to make something of their knowledge."
  curator_poi_title:1 "Point of Interest"
