--- a/mod/thmod/localisation/english/messages_l_english.yml
+++ b/mod/thmod/localisation/english/messages_l_english.yml
@@ -199,13 +199,13 @@
  ACTION_RECALL_EMBASSY_NOTIFICATION:2 "§H[From.GetName]§! has recalled their embassy from §H[Root.GetName]§!.\n\nIs this a sign of hostilities to come?"
  ACTION_DECLARE_WAR_NOTIFICATION:3 "§H[From.GetName]§! ประกาศสงครามกับ §H[Root.GetName]§!!\n\nตอนนี้เราจะมาดูกันว่าจักรวรรดิใดจะแข็งแกร่งกว่ากัน"
  ACTION_OFFER_PEACE_NOTIFICATION:1 "§H[From.GetName]§! ทำข้อตกลงสงบศึกกับ §H[Root.GetName]§!"
- ACTION_INVITE_TO_ALLIANCE_NOTIFICATION:2 "§H[Root.GetName]§! joined the §H[From.GetAllianceName]§!.\n\nThey will now stand unified against their enemies."
+ ACTION_INVITE_TO_ALLIANCE_NOTIFICATION:2 "§H[Root.GetName]§! เข้าร่วมกับ §H[From.GetAllianceName]§!\n\nตอนนี้พวกเขาจะยืนหยัดเป็นหนึ่งเดียวเพื่อจัดการศัตรูของพวกเขา"
  ACTION_LEAVE_ALLIANCE_NOTIFICATION:2 "§H[From.GetName]§! left the §H[From.GetAllianceName]§!.\n\nThis may represent opportunity for us..."
  ACTION_DEMAND_SUBJUGATION_NOTIFICATION:3 "§H[From.GetName]§! ปราบ §H[Root.GetName]§!\n\nพวกเขาสละอิสรภาพเพื่อแลกกับความปลอดภัย"
  ACTION_ASK_TO_BECOME_SUBJUGATED_NOTIFICATION:3 "§H[Root.GetName]§! ปราบ §H[From.GetName]§!\n\nพวกเขาสละอิสรภาพเพื่อแลกกับความปลอดภัย"
  ACTION_FORM_FEDERATION_NOTIFICATION:2 "§H[From.GetAllianceName]§! voted to a form a $FEDERATION$.\n\nThey have chosen to go into the galaxy together as one."
- ACTION_INVITE_TO_FEDERATION_NOTIFICATION:2 "§H[Root.GetName]§! joined the §H[From.GetAllianceName]§!.\n\nThey will now stand unified against their enemies."
- ACTION_ASK_TO_JOIN_FEDERATION_NOTIFICATION:2 "§H[From.GetName]§! joined the §H[Root.GetAllianceName]§!.\n\nThey will now stand unified against their enemies."
+ ACTION_INVITE_TO_FEDERATION_NOTIFICATION:2 "§H[Root.GetName]§! เข้าร่วมกับ §H[From.GetAllianceName]§!\n\nตอนนี้พวกเขาจะยืนหยัดเป็นหนึ่งเดียวเพื่อจัดการศัตรูของพวกเขา"
+ ACTION_ASK_TO_JOIN_FEDERATION_NOTIFICATION:2 "§H[From.GetName]§! เข้าร่วมกับ §H[Root.GetAllianceName]§!\n\nตอนนี้พวกเขาจะยืนหยัดเป็นหนึ่งเดียวเพื่อจัดการศัตรูของพวกเขา"
  ACTION_ASK_TO_LEAVE_FEDERATION_NOTIFICATION:0 "$ACTION_LEAVE_FEDERATION_NOTIFICATION$"
  ACTION_LEAVE_FEDERATION_NOTIFICATION:2 "§H[From.GetName]§! left the §H[Root.GetAllianceName]§!.\n\nThis may represent opportunity for us..."
  ACTION_KICK_FROM_FEDERATION_NOTIFICATION:1 "The §H[From.GetAllianceName]§! voted to kick §H[Root.GetName]§! from the Federation."
