--- a/mod/thmod/localisation/english/nemesis_intel_l_english.yml
+++ b/mod/thmod/localisation/english/nemesis_intel_l_english.yml
@@ -203,11 +203,11 @@
  first_contact_skill_3:0 "First Contact Expertise"
  first_contact_skill_4:0 "First Contact Mastery"
  FIRST_CONTACT_ADD_INTEL:0 "ข้อมูลข่าวกรองของ §Y[Root.ContactCountry.GetRealName]§! กำหนดเป็น $INTEL|0G$\n"
- seek_friends_tt:1 "We shall seek friendly relations with the §Y[contact_empire.GetName]§!."
- seek_enemies_tt:2 "We shall prepare for hostilities with the §Y[contact_empire.GetName]§!, giving us §G+33%§! Spy Network growth on them."
- seek_enemies_tt_short:0 "We shall prepare for hostilities with the §Y[contact_empire.GetName]§!."
- seek_isolation_tt:2 "We shall seek to distance ourselves from the §Y[contact_empire.GetName]§!, giving them §R-33%§! Spy Network growth on us."
- seek_isolation_tt_short:0 "We shall seek to distance ourselves from the §Y[contact_empire.GetName]§!."
+ seek_friends_tt:1 "เราจะเป็นมิตรกับ §Y[contact_empire.GetName]§!"
+ seek_enemies_tt:2 "เราจะเตรียมพร้อมสำหรับการสู้รบ §Y[contact_empire.GetName]§! ทำให้การเพิ่มของเครือข่ายสายลับเราที่มีต่อพวกเขา §G+33%§!"
+ seek_enemies_tt_short:0 "เราจะเตรียมพร้อมสำหรับการสู้รบกับ §Y[contact_empire.GetName]§!"
+ seek_isolation_tt:2 "เราจะพยายามตีตัวออกห่างจาก §Y[contact_empire.GetName]§! ทำให้การเพิ่มของเครือข่ายสายลับพวกเขาที่มีต่อเรา §R-33%§!"
+ seek_isolation_tt_short:0 "เราจะพยายามตีตัวออกห่างจาก §Y[contact_empire.GetName]§!"
  friendship_already_precluded:3 "[contact_empire.GetPrecludedFriendshipCause]"
  friendship_already_precluded_hostile:0 "As we have already acted with hostility towards the §Y[contact_empire.GetName]§!, we can dispense with the pleasantries."
  friendship_already_precluded_slave_origins:0 "No friendship with former masters."
