--- a/mod/thmod/localisation/english/paragon_2_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_2_l_english.yml
@@ -971,7 +971,7 @@
  leader_trait_neurotic_desc:0 "This leader takes too many precautions, with a complete disregard for efficiency."
  leader_trait_opinionated:1 "Stubbornness"
  leader_trait_opinionated_desc:0 "This leader keeps strong opinions on certain topics, making collaboration with other researchers difficult."
- leader_trait_destructive:1 "Destructor"
+ leader_trait_destructive:1 "ไม่รักษาของ"
  leader_trait_destructive_desc:0 "This leader does not concern themself with the well-being of spacecraft or machinery, which in turn needs constant repairs and maintenance to be kept operational."
  subclass_admiral_aggressor:0 "ผู้รุกราน"
  subclass_admiral_aggressor_desc:0 "Offense is the best defense. Aggressors are known for their reckless and daring attacks, often annihilating enemy fleets before they can counter such rapid strike tactics."
@@ -1319,7 +1319,7 @@
  planet_anglers:0 "Angler Jobs"
  mod_planet_anglers_produces_mult:0 "£job_angler£ Angler Output"
  mod_shipclass_military_build_speed_mult:0 "ความเร็วการสร้างยานทางทหาร"
- mod_ship_science_alloys_upkeep_add:0 "Science Ship £alloys£ Alloys Upkeep"
+ mod_ship_science_alloys_upkeep_add:0 "ยานวิจัยวิทยาศาสตร์มีค่าบำรุงรักษาที่เป็น £alloys£ โลหะผสม"
  mod_salvage_chance_add:0 "Chance to Salvage Ships"
  MOD_COUNTRY_COMMERCIAL_PACT_MULT:0 "ประสิทธิภาพของสนธิสัญญาการค้า"
  mod_planet_soldiers_energy_produces_add:0 "£energy£ $energy$ from £job_soldier£ [GetSoldierPlural]"
