--- a/mod/thmod/localisation/english/paragon_3_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_3_l_english.yml
@@ -7,13 +7,13 @@
  action.600.B:0 "Allow their surrender."
  tech_xeno_linguistics:0 "ภาษาศาสตร์-ต่างดาว"
  tech_xeno_linguistics_desc:0 "Given recent encounters with intelligent races, it is essential that we improve our xeno-linguistic capabilities."
- tech_xeno_linguistics_effect:1 "Grants a small amount of $r_influence$\nAllows §HRenowned Leaders§! to appear."
+ tech_xeno_linguistics_effect:1 "ได้รับ $r_influence$ จำนวนเล็กน้อย\nทำให้ §Hผู้นำที่มีชื่อเสียง§! ปรากฏตัว"
  paragon_2.2105.name:0 "Exceptional Individuals"
  paragon_2.2105.desc_01:0 "We have proven beyond any doubt that the galaxy is filled with life. Apart from the dominant species and nations, there are many others who traverse the stars. From time to time, exceptional individuals may arise to shake the foundations of galactic power.\n\nIf we can harness their ambition, these renowned leaders may be willing to join our cause."
  paragon_2.2105.desc_02:0 "We have proven beyond any doubt that the galaxy is filled with life. Apart from the dominant species and nations, there are many others who traverse the stars. From time to time, exceptional individuals may arise to shake the foundations of galactic power.\n\nAlthough their alien ways may be strange or even repellent, harnessing the talents of such §Hrenowned leaders§! may prove a boon to our cause."
  paragon_2.2105.a:0 "Send out the call."
  paragon_2.2105.b:0 "They might prove useful... for a time."
- paragon_2.2105.tt:0 "From now on, §HRenowned Leaders§! can contact us."
+ paragon_2.2105.tt:0 "ตอนนี้ §Hผู้นำที่มีชื่อเสียง§! สามารถติดต่อเราได้แล้ว"
  sm_recruitment_office:0 "สำนักงานสรรหาและคัดเลือกระหว่างดวงดาว"
  sm_recruitment_office_desc:0 "Linguists, headhunters, explorers: they work together to scour the known stars in search of talent. Here, leaders of renown can be recruited to serve our cause.\n\nจำกัดจำนวนต่อจักรวรรดิ: §Y1§!"
  sm_recruitment_office_tooltip:0 "จักรวรรดิมีการปรับเปลี่ยน\n$t$จำนวนผู้นำที่สรรหาจากภายนอก: §G+1§!\n$t$ผู้นำได้รับประสบการณ์: §G+10%§!\n$t$เพิ่มโอกาสให้ §Hผู้นำที่มีชื่อเสียง§! ให้ติดต่อเรา"
