--- a/mod/thmod/localisation/english/modifiers_2_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_2_l_english.yml
@@ -159,7 +159,7 @@
  mod_damage_vs_country_type_amoeba_mult:0 "ทำความเสียหายกับอะมีบาอวกาศ"
  mod_damage_vs_country_type_crystal_mult:0 "ทำความเสียหายกับ Crystalline Entities"
  mod_damage_vs_country_type_drone_mult:0 "ทำความเสียหายกับ Ancient Mining Drones"
- mod_damage_vs_country_type_tiyanki_mult:0 "Damage to Tiyanki"
+ mod_damage_vs_country_type_tiyanki_mult:0 "สร้างความเสียหายกับ Tiyanki"
  mod_damage_vs_country_type_cloud_mult:0 "ทำความเสียหายกับ Void Clouds"
  mod_damage_vs_country_type_swarm_mult:1 "ทำความเสียหายกับ Prethoryn Creatures"
  mod_damage_vs_country_type_fallen_empire_mult:0 "ทำความเสียหายกับจักรวรรดิเก่าแก่ทรงพลัง(ฟอลเล็นเอ็มไพร์)"
@@ -170,8 +170,8 @@
  mod_damage_vs_country_type_ai_empire_mult:1 "ทำความเสียหายกับ Contingency"
  mod_damage_vs_country_type_sentinels_mult:0 "ทำความเสียหายกับเซนติเนล"
  mod_damage_vs_country_type_gate_builders_mult:0 "ทำความเสียหายกับ Gate-builders"
- mod_damage_vs_country_type_gray_mult:0 "Damage to the Gray Tempest"
- MOD_DAMAGE_VS_PLAYER_CRISIS_MULT:0 "Damage to Crisis-Seeking Civilizations"
+ mod_damage_vs_country_type_gray_mult:0 "สร้างความเสียหายกับ Gray Tempest"
+ MOD_DAMAGE_VS_PLAYER_CRISIS_MULT:0 "สร้างความเสียหายกับ อารยธรรมที่แสวงหาไครซิส"
  MOD_DAMAGE_VS_RIVAL_MULT:0 "ทำความเสียหายกับคู่แข่ง"
  MOD_DAMAGE_VS_SUPERIOR_EMPIRES_MULT:0 "สร้างความเสียหายให้กับจักรวรรดิที่การทหารเหนือกว่า"
  opinion_literary_savior:0 "Literary Savior"
