--- a/mod/thmod/localisation/english/paragon_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_l_english.yml
@@ -1117,9 +1117,9 @@
  council_agenda_agenda_impenetrable_border_effect:1 "เพิ่มโอกาสของตัวเลือกการวิจัยที่เกี่ยวกับ ฐานอวกาศ"
  agenda_impenetrable_border_finish:0 "$council_agenda_agenda_impenetrable_border_name$ $agenda_ref$"
  agenda_impenetrable_border_finish_desc:0 "$council_agenda_agenda_impenetrable_border_desc$"
- council_agenda_agenda_second_strike_name: "Second Strike"
- council_agenda_agenda_second_strike_desc: "Attacking while your enemy is reeling remains a time-honored [Owner.GetSpeciesName] tradition."
- council_agenda_agenda_second_strike_effect: "Removes all truces with Rivals."
+ council_agenda_agenda_second_strike_name: "โจมตีโต้กลับ"
+ council_agenda_agenda_second_strike_desc: "การโจมตีในขณะที่ศัตรูกำลังซวนเซยังคงเป็นวัฒนธรรม [Owner.GetSpeciesName] ที่สืบทอดมายาวนาน"
+ council_agenda_agenda_second_strike_effect: "ลบการพักรบทั้งหมดกับคู่แข่ง"
  agenda_second_strike_finish: "$council_agenda_agenda_second_strike_name$ $agenda_ref$"
  council_agenda_agenda_leadership_conditioning_name:0 "การปรับความเป็นผู้นำ"
  council_agenda_agenda_leadership_conditioning_desc:0 "ผู้นำของเราทุกคนใช้เวลาและความพยายามอย่างมากในการทบทวนและฝึกพฤติกรรมใหม่"
@@ -1230,22 +1230,22 @@
  mod_restored_scientist_node_bonus_skill: "$councilor_gestalt_scientist_with_icon$ฟื้นฟู เพิ่มสกิล"
  create_new_node: "\nสิ่งนี้จะสร้าง §Y[GetName]§! ใหม่ สกิล [GetRestoredNodeSkill]"
  hive_restore_node_effect: "This Node will be culled.$create_new_node$"
- council_agenda_agenda_hive_restore_governor_name: "Cull $councilor_gestalt_governor$"
+ council_agenda_agenda_hive_restore_governor_name: "คัดเลือก $councilor_gestalt_governor$"
  council_agenda_agenda_hive_restore_governor_desc: "Our $councilor_gestalt_governor$ is no longer suited for our purpose, it shall be culled and a replacement Node shall be grown."
- council_agenda_agenda_hive_restore_scientist_name: "Cull $councilor_gestalt_scientist$"
+ council_agenda_agenda_hive_restore_scientist_name: "คัดเลือก $councilor_gestalt_scientist$"
  council_agenda_agenda_hive_restore_scientist_desc: "Our $councilor_gestalt_scientist$ is no longer suited for our purpose, it shall be culled and a replacement Node shall be grown."
- council_agenda_agenda_hive_restore_admiral_name: "Cull $councilor_gestalt_admiral$"
+ council_agenda_agenda_hive_restore_admiral_name: "คัดเลือก $councilor_gestalt_admiral$"
  council_agenda_agenda_hive_restore_admiral_desc: "Our $councilor_gestalt_admiral$ is no longer suited for our purpose, it shall be culled and a replacement Node shall be grown."
- council_agenda_agenda_hive_restore_general_name: "Cull $councilor_gestalt_general$"
+ council_agenda_agenda_hive_restore_general_name: "คัดเลือก $councilor_gestalt_general$"
  council_agenda_agenda_hive_restore_general_desc: "Our $councilor_gestalt_general$ is no longer suited for our purpose, it shall be culled and a replacement Node shall be grown."
  machine_restore_node_effect: "This Node will be reformatted.$create_new_node$"
- council_agenda_agenda_machine_restore_governor_name: "Reformat $councilor_gestalt_governor$"
+ council_agenda_agenda_machine_restore_governor_name: "ฟอร์แมต $councilor_gestalt_governor$ ใหม่"
  council_agenda_agenda_machine_restore_governor_desc: "Our $councilor_gestalt_governor$ is no longer suited for our purpose, it shall be reformatted and restored to the last valid backup."
- council_agenda_agenda_machine_restore_scientist_name: "Reformat $councilor_gestalt_scientist$"
+ council_agenda_agenda_machine_restore_scientist_name: "ฟอร์แมต $councilor_gestalt_scientist$ ใหม่"
  council_agenda_agenda_machine_restore_scientist_desc: "Our $councilor_gestalt_scientist$ is no longer suited for our purpose, it shall be reformatted and restored to the last valid backup."
- council_agenda_agenda_machine_restore_admiral_name: "Reformat $councilor_gestalt_admiral$"
+ council_agenda_agenda_machine_restore_admiral_name: "ฟอร์แมต $councilor_gestalt_admiral$ ใหม่"
  council_agenda_agenda_machine_restore_admiral_desc: "Our $councilor_gestalt_admiral$ is no longer suited for our purpose, it shall be reformatted and restored to the last valid backup."
- council_agenda_agenda_machine_restore_general_name: "Reformat $councilor_gestalt_general$"
+ council_agenda_agenda_machine_restore_general_name: "ฟอร์แมต $councilor_gestalt_general$ ใหม่"
  council_agenda_agenda_machine_restore_general_desc: "Our $councilor_gestalt_general$ is no longer suited for our purpose, it shall be reformatted and restored to the last valid backup."
  restore_gestalt_councilor_effect_tooltip: "[GetRestoreNodeEffectTooltip]"
  tech_node_culling_1: "โหนดคัดเลือกขั้นพื้นฐาน"
